feat: signin / signup ⌮

--- a/package.json
+++ b/package.json
@@ -9,21 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@nextui-org/button": "^2.0.34",
+    "@nextui-org/card": "^2.0.31",
+    "@nextui-org/input": "^2.2.2",
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "^0.0.19",
+    "@tanstack/react-query": "^5.45.0",
     "@types/lodash": "^4.17.5",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dynamoose": "^4.0.1",
+    "framer-motion": "^11.2.10",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.395.0",
     "mongoose": "^8.4.1",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
     "resend": "^3.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
