--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ RESEND_API_KEY=re_i5DM3qCL_5tvb5Jheiv5ExizXS4ug1rcP
 SALT_ROUND=670df87b-7738-42b3-85a3-61a54e1c3168
 
 NEXTAUTH_SECRET=670df87b-7738-42b3-85a3-61a54e1c3168
+
+SERVER_URL=http://localhost:3000/api
