feat: send varification email

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "dynamoose": "^4.0.1",
     "framer-motion": "^11.2.10",
+    "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
     "mongoose": "^8.4.1",
@@ -36,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
+    "react18-input-otp": "^1.1.4",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
