--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.2.1",
     "@hookform/resolvers": "^3.6.0",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/card": "^2.0.31",
     "@nextui-org/input": "^2.2.2",
+    "@nextui-org/modal": "^2.0.36",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
