--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-email/components": "^0.0.19",
     "@tanstack/react-query": "^5.45.0",
     "@types/lodash": "^4.17.5",
+    "ai": "3.0.24",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.51.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
