feat: add predeiction apis

--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.22",
+    "@ai-sdk/openai": "^0.0.30",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.2.1",
     "@hookform/resolvers": "^3.6.0",
+    "@nextui-org/avatar": "^2.0.30",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/card": "^2.0.31",
+    "@nextui-org/dropdown": "^2.1.26",
     "@nextui-org/input": "^2.2.2",
     "@nextui-org/modal": "^2.0.36",
+    "@nextui-org/navbar": "^2.0.33",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
@@ -23,7 +28,7 @@
     "@react-email/components": "^0.0.19",
     "@tanstack/react-query": "^5.45.0",
     "@types/lodash": "^4.17.5",
-    "ai": "3.0.24",
+    "ai": "^3.1.37",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
