feat: messqges get and delete apis

--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@nextui-org/avatar": "^2.0.30",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/card": "^2.0.31",
+    "@nextui-org/chip": "^2.0.30",
     "@nextui-org/dropdown": "^2.1.26",
     "@nextui-org/input": "^2.2.2",
+    "@nextui-org/listbox": "^2.1.22",
     "@nextui-org/modal": "^2.0.36",
     "@nextui-org/navbar": "^2.0.33",
     "@nextui-org/react": "^2.4.2",
+    "@nextui-org/scroll-shadow": "^2.1.17",
+    "@nextui-org/spinner": "^2.0.30",
     "@nextui-org/system": "^2.2.2",
+    "@nextui-org/tabs": "^2.0.32",
     "@nextui-org/theme": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "^0.0.19",
