--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ build/
 dist/
 
 # Environment variables
+.env/
 .env.local
 .env.development.local
 .env.test.local
@@ -30,5 +31,3 @@ package-lock.json
 # Miscellaneous
 .DS_Store
 
-
-/.env
