--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/avatar": "^2.0.30",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/card": "^2.0.31",
+    "@nextui-org/checkbox": "^2.1.2",
     "@nextui-org/chip": "^2.0.30",
     "@nextui-org/dropdown": "^2.1.26",
     "@nextui-org/input": "^2.2.2",
@@ -26,6 +27,7 @@
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/scroll-shadow": "^2.1.17",
     "@nextui-org/spinner": "^2.0.30",
+    "@nextui-org/switch": "^2.0.31",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/tabs": "^2.0.32",
     "@nextui-org/theme": "^2.2.6",
@@ -33,12 +35,14 @@
     "@react-email/components": "^0.0.19",
     "@tanstack/react-query": "^5.45.0",
     "@types/lodash": "^4.17.5",
+    "@usersnap/browser": "^0.0.5",
     "ai": "^3.1.37",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dynamoose": "^4.0.1",
+    "feeder-react-feedback": "^0.0.6",
     "framer-motion": "^11.2.10",
     "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
